intel/bench_214_new/extr_.FFmpeglibavfiltervf_colorbalance.c_apply_lut8_p_with_main/log.txt
bench_214_new/extr_.FFmpeglibavfiltervf_colorbalance.c_apply_lut8_p_with_main/extr_.FFmpeglibavfiltervf_colorbalance.c_apply_lut8_p_with_main.c:33:17: error: cannot initialize a variable of type 'ThreadData *' (aka 'TYPE_7__ *') with an lvalue of type 'void *'
    ThreadData *td = arg;
                ^    ~~~
1 error generated.
HLS FPGA Parse FAILED.
